# scppl

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.rst  requirements.txt
cmake/modules/: FindBoostPFR.cmake
cmake/scripts/: CompilerTool.cmake  Coverage.cmake  DefineOption.cmake  SphinxDoc.cmake
cmake/templates/: scpplConfig.cmake.in
cmake/tools/: clang-no-tidy  googletest.imp
docs/: building.rst  changelog.rst  common.py  conf.py.in  index.rst
docs/_static/css/: custom.css
libraries/binary/: CMakeLists.txt
libraries/binary/docs/: building.rst  changelog.rst  concepts.rst  conf.py.in  functions.rst  index.rst  traits.rst
libraries/binary/docs/classes/: binary.rst  binary_string.rst  index.rst
libraries/binary/docs/reference/: concepts.rst  functions.rst  index.rst  traits.rst
libraries/binary/docs/reference/classes/: binary.rst  binary_stream.rst  binary_string.rst  index.rst
libraries/binary/docs/usage/: encoding_decoding.rst  index.rst  packing_unpacking.rst  streams.rst
libraries/binary/include/scppl/binary/: Binary.hpp  BinaryInputStream.hpp  BinaryOutputStream.hpp  BinaryStream.hpp  BinaryString.hpp  Concepts.hpp  Traits.hpp  Utility.hpp
libraries/binary/test/: BinaryStream_Functions.cpp  BinaryStream_Input.cpp  BinaryStream_Output.cpp  BinaryString_Decode.cpp  BinaryString_Encode.cpp  Binary_Pack.cpp  Binary_Unpack.cpp  CMakeLists.txt  Data.hpp  Main.cpp  Types.hpp  Utility.hpp  Values.hpp
libraries/os/: CMakeLists.txt
libraries/os/docs/: building.rst  conf.py.in  index.rst
libraries/os/docs/_static/css/: custom.css
libraries/os/docs/reference/: functions.rst  index.rst  platform.rst
libraries/os/docs/reference/classes/: filesystem.rst  index.rst  standardpaths.rst  string.rst
libraries/os/include/scppl/os/: FileSystem.hpp  Platform.hpp  StandardPaths.hpp  String.hpp  Utility.hpp
libraries/os/src/: FileSystem.cpp  StandardPaths.cpp  String.cpp  Utility.cpp
libraries/os/test/: CMakeLists.txt  FileSystem.cpp  Main.cpp  StandardPaths.cpp  String.cpp  Utility.cpp
libraries/os/tools/: Platform.hpp.jinja  generate_platform.py
